--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,31 @@
-alembic==1.12.0
-blinker==1.6.2
-cachelib==0.10.2
-cffi==1.15.1
-click==8.1.7
-colorama==0.4.6
-cryptography==41.0.3
-Flask==2.3.3
-Flask-Login==0.6.2
-Flask-Mail==0.9.1
-Flask-Migrate==4.0.5
-Flask-Session==0.5.0
-Flask-SQLAlchemy==3.1.1
-Flask-WTF==1.1.1
-greenlet==2.0.2
-itsdangerous==2.1.2
-Jinja2==3.1.2
-Mako==1.2.4
-MarkupSafe==2.1.3
-mysql-connector-python==8.1.0
-protobuf==4.21.12
-pycparser==2.21
-PyMySQL==1.1.0
-python-dotenv==1.0.0
-SQLAlchemy==2.0.20
-typing_extensions==4.7.1
-Werkzeug==2.3.7
-WTForms==3.0.1
+alembic
+blinker
+cachelib
+cffi
+click
+colorama
+cryptography
+Flask
+Flask-Login
+Flask-Mail
+Flask-Migrate
+Flask-Session
+Flask-SQLAlchemy
+Flask-WTF
+greenlet
+gunicorn
+itsdangerous
+Jinja2
+Mako
+MarkupSafe
+mysql-connector-python
+packaging
+protobuf
+psycopg2
+pycparser
+PyMySQL
+python-dotenv
+SQLAlchemy
+typing_extensions
+Werkzeug
+WTForms
